frontend/src/views/pages/CoursesCompleted.css
.courses-completed-container {
    display: flex;
  }
  
  .left-panel {
    flex: 0 0 70%;
    overflow-y: auto;
    height: 100vh;
  }
  
  .right-panel {
    flex: 0 0 30%;
    position: sticky;
    top: 20px;
  }
  
  .course-filters{
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    margin-top: 20px;
    margin-bottom: 20px;
    padding: 10px;
    background-color: rgb(247, 247, 247);
    border-radius: 30px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  }
  
  .course-filters .MuiFormControl-root.date-picker {
    min-width: 120px;
  }
  
  .course-filters .date-separator {
    width: auto;
    padding: 0 10px;
  }
  
  .course-filters .MuiOutlinedInput-notchedOutline {
    border: none;
  }
  
  .course-filters.MuiSelect-root:focus {
    background-color: transparent;
  }
  
  .course-filters .MuiInputBase-input {
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 15px;
    padding-right: 15px;
  }
  body {
    overflow: hidden;
  }

